syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;proto";

service Order{
  //购物车相关功能
  rpc CartItemList(UserInfo) returns(CartItemListResponse);//获取用户购物车信息
  rpc CreateCartItem(CartItemReq) returns (ShopCartInfoResponse);//添加商品到购物车
  rpc UpdateCartItem(CartItemReq) returns (google.protobuf.Empty);//更新购物车记录
  rpc DeleteCartItem(CartItemReq) returns (google.protobuf.Empty);//删除购物车记录
  //订单
  rpc CreateOrder(OrderReq) returns(OrderInfoRsp);//创建订单
  rpc OrderList(OrderFilterRequest) returns(OrderListRsp);//订单列表
  rpc OrderDetail(OrderReq) returns(OrderInfoDetalRsp);//订单 详情
  rpc UpdateOrderStatus(OrderStatus) returns (google.protobuf.Empty);//更新订单状态
}

message UserInfo{
    int32 id = 1;
}

message CartItemReq{
  int32 id = 1;
  int32 userId = 2;
  int32 goodsId = 3;
  int32 nums = 4;
  bool checked = 5;
  string goodsName = 6;
  string goodsImage = 7;
  float goodsPrice = 8;
}

message ShopCartInfoResponse{
    int32 id = 1;
    int32 userId = 2;
    int32 goodsId = 3;
    int32 nums = 4;
    bool checked = 5;
}

message CartItemListResponse{
    int32 total = 1;
    repeated ShopCartInfoResponse data = 2;
}

message OrderReq{
  int32 id = 1;
  int32 userId = 2;
  string address = 3;
  string name = 4;
  string mobile = 5;
  string post = 6;
}

message OrderInfoRsp{
  int32 id = 1;
  int32 userId = 2;
  string orderSn = 3;
  string payType = 4;
  string status = 5;
  string post = 6;
  float total = 7;
  string address = 8;
  string name = 9;
  string mobile = 10;
  string addTime = 11;
}

message OrderFilterRequest{
    int32 userId = 1;
    int32 page = 2;
    int32 PerNums = 3;
}

message OrderListRsp{
    int32 total = 1;
    repeated OrderInfoRsp data = 2;
}

message OrderItemRsp{
    int32 id = 1;
    int32 orderId = 2;
    int32 goodsId = 3;
    string goodName = 4;
    string goodImage = 5;
    float goodsPrice = 6;
    int32 nums= 7;
}

message OrderInfoDetalRsp{
    OrderInfoRsp orderInfo = 1;
    repeated OrderItemRsp goods = 2;
}

message OrderStatus{
    int32 id = 1;
    string orderSn = 2;
    string status = 3;
}